feat: add administrator AWS Bedrock connections
